traefik/templates/traefik-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.framsburg.ch`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboardtls
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: traefik.framsburg.ch
      http:
        paths:
          - pathType: Prefix
            path: "/dashboard"
            backend:
              service:
                name: "traefik"
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: "traefik"
                port:
                  number: 80
  tls:
    - hosts:
      - traefik.framsburg.ch
      secretName: traefik-framsburg-ch-tls
